--- a/miniproject/src/main/webapp/css/findAcc.css
+++ b/miniproject/src/main/webapp/css/findAcc.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 * {
 	margin: 0px;
 	padding: 0px;
@@ -11,31 +12,20 @@ a{
 .text_margine{
     padding: 5px;
 }
-body {
-	text-decoration: none;
-	color: black;
-	list-style: none;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-	background-size: cover;
-}
 .bgc{
 	background-color: rgb(191,217,112);
 }
 .logo{
     width: 180px;
 }
-.title{
+
+body {
 	
-	margin-top: 60px;
+	text-decoration : none;
 	list-style: none;
-	justify-content: center;
-	font-size: 32px;
-	color: rgb(191,217,112);
-	text-align: center;
-	margin-bottom: 60px;
-	
+	height: 100vh;
+	background-size: cover;
+	text-decoration: none;
 }
 
 body ::before {
@@ -49,18 +39,39 @@ body ::before {
 	background-color: rgba(0, 0, 0, .7);
 }
 
-.loginform {
-	position: relative;
-	z-index: 2;
+.main{
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	
+	justify-content: space-evenly; 
 }
 
-.loginform>h1 {
+.find-id {
+	justify-content: flex-start; 
+	position : relative;
+	margin-top:70px;
+	margin-right:70px;
+	z-index: 2;
+	position: relative;
+}
+
+.find-id>h1 {
 	font-size: 32px;
-	color: rgb(191,217,112);
+	color:  rgb(191,217,112);
+	text-align: center;
+	margin-bottom: 60px;
+}
+
+.find-pwd {
+	display: inline;
+	justify-content: flex-end;
+	margin-top: 70px;
+	margin-left:70px;
+	position: relative;
+	z-index: 2;
+}
+
+.find-pwd>h1 {
+	font-size: 32px;
+	color:  rgb(191,217,112);
 	text-align: center;
 	margin-bottom: 60px;
 }
@@ -80,7 +91,7 @@ body ::before {
 	padding: 20px 10px 10px;
 	background-color: transparent;
 	border: none;
-	border-bottom: 1px solid rgb(191,217,112);
+	border-bottom: 1px solid #999;
 	font-size: 18px;
 	color: black;
 	outline: none;
@@ -91,7 +102,7 @@ body ::before {
 	left: 10px;
 	top: 15px;
 	font-size: 18px;
-	color: rgb(191,217,112);
+	color:  rgb(191,217,112);
 	transition: all .5s ease;
 }
 
@@ -115,36 +126,3 @@ body ::before {
 	border-radius: 25px;
 	cursor: pointer;
 }
-
-.checkbtn {
-	margin-top: 10px;
-	justify-content: end;
-}
-.checkbtn>button {
-	position: absolute;
-	left: 300px;
-	top: 15px;
-	width: 100px;
-	background: rgb(191,217,112);
-	color: #fff;
-	font-size: 20px;
-	border: none;
-	border-radius: 25px;
-	cursor: pointer;
-}
-
-#ckid {
-	transition : .5s ease-out;
-	visibility :hidden;
-	opacity: 0;
-}
-.ck-res{
-	position: absolute;
-	left: 300px;
-	justify-content: end;
-	z-index: 2;
-}
-.h6{
-	font-size: 15px;
-}
-
