--- a/miniproject/src/main/webapp/css/login.css
+++ b/miniproject/src/main/webapp/css/login.css
@@ -1,9 +1,11 @@
 @charset "UTF-8";
+
 * {
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
 }
+
 a{
     text-decoration: none;
     color: black;
@@ -11,6 +13,7 @@ a{
 .text_margine{
     padding: 5px;
 }
+
 body {
 	text-decoration: none;
 	color: black;
@@ -19,23 +22,6 @@ body {
 	align-items: center;
 	height: 100vh;
 	background-size: cover;
-}
-.bgc{
-	background-color: rgb(191,217,112);
-}
-.logo{
-    width: 180px;
-}
-.title{
-	
-	margin-top: 60px;
-	list-style: none;
-	justify-content: center;
-	font-size: 32px;
-	color: rgb(191,217,112);
-	text-align: center;
-	margin-bottom: 60px;
-	
 }
 
 body ::before {
@@ -49,13 +35,31 @@ body ::before {
 	background-color: rgba(0, 0, 0, .7);
 }
 
+.bgc{
+	background-color: rgb(191,217,112);
+}
+.logo{
+    width: 180px;
+}
+.title{
+	
+	margin-top: 80px;
+	list-style: none;
+	justify-content: center;
+	font-size: 32px;
+	color: rgb(191,217,112);
+	text-align: center;
+	margin-bottom: 60px;
+	
+}
+
+
 .loginform {
 	position: relative;
 	z-index: 2;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	
 }
 
 .loginform>h1 {
@@ -80,9 +84,9 @@ body ::before {
 	padding: 20px 10px 10px;
 	background-color: transparent;
 	border: none;
-	border-bottom: 1px solid rgb(191,217,112);
+	border-bottom: 1px solid #999;
 	font-size: 18px;
-	color: black;
+	color:rgb(191,217,112);
 	outline: none;
 }
 
@@ -116,35 +120,26 @@ body ::before {
 	cursor: pointer;
 }
 
-.checkbtn {
-	margin-top: 10px;
-	justify-content: end;
-}
-.checkbtn>button {
-	position: absolute;
-	left: 300px;
-	top: 15px;
-	width: 100px;
-	background: rgb(191,217,112);
-	color: #fff;
-	font-size: 20px;
-	border: none;
-	border-radius: 25px;
-	cursor: pointer;
+.caption {
+	margin-top: 20px;
+	text-align: center;
 }
 
-#ckid {
-	transition : .5s ease-out;
-	visibility :hidden;
-	opacity: 0;
-}
-.ck-res{
-	position: absolute;
-	left: 300px;
-	justify-content: end;
-	z-index: 2;
-}
-.h6{
+.caption>a {
 	font-size: 15px;
+	color: rgb(191,217,112);
 }
 
+.caption2 {
+	margin-top: 10px;
+	text-align: center;
+}
+
+.caption2>a {
+	font-size: 15px;
+	color: rgb(191,217,112);
+}
+
+.subsection{
+	justify-content: center;
+}
