--- a/miniproject/src/main/webapp/css/findAcc.css
+++ b/miniproject/src/main/webapp/css/findAcc.css
@@ -13,10 +13,10 @@ a{
     padding: 5px;
 }
 .bgc{
-	background-color: rgb(191,217,112);
+	background-color:#00A652;
 }
 .logo{
-    width: 180px;
+    width: 227px;
 }
 
 body {
@@ -55,7 +55,7 @@ body ::before {
 
 .find-id>h1 {
 	font-size: 32px;
-	color:  rgb(191,217,112);
+	color: #00A652;
 	text-align: center;
 	margin-bottom: 60px;
 }
@@ -71,7 +71,7 @@ body ::before {
 
 .find-pwd>h1 {
 	font-size: 32px;
-	color:  rgb(191,217,112);
+	color: #00A652;
 	text-align: center;
 	margin-bottom: 60px;
 }
@@ -102,7 +102,7 @@ body ::before {
 	left: 10px;
 	top: 15px;
 	font-size: 18px;
-	color:  rgb(191,217,112);
+	color: #00A652;
 	transition: all .5s ease;
 }
 
@@ -119,7 +119,7 @@ body ::before {
 .btn-area button {
 	width: 100%;
 	height: 50px;
-	background: rgb(191,217,112);
+	background:#00A652;
 	color: #fff;
 	font-size: 20px;
 	border: none;
