--- a/miniproject/src/main/webapp/css/join.css
+++ b/miniproject/src/main/webapp/css/join.css
@@ -21,10 +21,10 @@ body {
 	background-size: cover;
 }
 .bgc{
-	background-color: rgb(191,217,112);
+	background-color: #00A652;
 }
 .logo{
-    width: 180px;
+    width: 227px;
 }
 .title{
 	
@@ -32,7 +32,7 @@ body {
 	list-style: none;
 	justify-content: center;
 	font-size: 32px;
-	color: rgb(191,217,112);
+	color: #00A652;
 	text-align: center;
 	margin-bottom: 60px;
 	
@@ -60,7 +60,7 @@ body ::before {
 
 .loginform>h1 {
 	font-size: 32px;
-	color: rgb(191,217,112);
+	color:#00A652;
 	text-align: center;
 	margin-bottom: 60px;
 }
@@ -80,7 +80,7 @@ body ::before {
 	padding: 20px 10px 10px;
 	background-color: transparent;
 	border: none;
-	border-bottom: 1px solid rgb(191,217,112);
+	border-bottom: 1px solid #00A652;
 	font-size: 18px;
 	color: black;
 	outline: none;
@@ -91,7 +91,7 @@ body ::before {
 	left: 10px;
 	top: 15px;
 	font-size: 18px;
-	color: rgb(191,217,112);
+	color: #00A652;
 	transition: all .5s ease;
 }
 
@@ -108,7 +108,7 @@ body ::before {
 .btn-area button {
 	width: 100%;
 	height: 50px;
-	background: rgb(191,217,112);
+	background: #00A652;
 	color: #fff;
 	font-size: 20px;
 	border: none;
@@ -125,7 +125,7 @@ body ::before {
 	left: 300px;
 	top: 15px;
 	width: 100px;
-	background: rgb(191,217,112);
+	background: #00A652;
 	color: #fff;
 	font-size: 20px;
 	border: none;
