--- a/miniproject/src/main/webapp/css/login.css
+++ b/miniproject/src/main/webapp/css/login.css
@@ -36,10 +36,10 @@ body ::before {
 }
 
 .bgc{
-	background-color: rgb(191,217,112);
+	background-color: #00A652;;
 }
 .logo{
-    width: 180px;
+    width: 227px;
 }
 .title{
 	
@@ -47,7 +47,7 @@ body ::before {
 	list-style: none;
 	justify-content: center;
 	font-size: 32px;
-	color: rgb(191,217,112);
+	color: #00A652;
 	text-align: center;
 	margin-bottom: 60px;
 	
@@ -64,7 +64,7 @@ body ::before {
 
 .loginform>h1 {
 	font-size: 32px;
-	color: rgb(191,217,112);
+	color: #00A652;
 	text-align: center;
 	margin-bottom: 60px;
 }
@@ -86,7 +86,7 @@ body ::before {
 	border: none;
 	border-bottom: 1px solid #999;
 	font-size: 18px;
-	color:rgb(191,217,112);
+	color:black;
 	outline: none;
 }
 
@@ -95,7 +95,7 @@ body ::before {
 	left: 10px;
 	top: 15px;
 	font-size: 18px;
-	color: rgb(191,217,112);
+	color:#00A652;
 	transition: all .5s ease;
 }
 
@@ -112,7 +112,7 @@ body ::before {
 .btn-area button {
 	width: 100%;
 	height: 50px;
-	background: rgb(191,217,112);
+	background:#00A652;
 	color: #fff;
 	font-size: 20px;
 	border: none;
@@ -127,7 +127,7 @@ body ::before {
 
 .caption>a {
 	font-size: 15px;
-	color: rgb(191,217,112);
+	color:#00A652;
 }
 
 .caption2 {
@@ -137,7 +137,7 @@ body ::before {
 
 .caption2>a {
 	font-size: 15px;
-	color: rgb(191,217,112);
+	color:#00A652;
 }
 
 .subsection{
