--- a/miniproject/src/main/webapp/css/index.css
+++ b/miniproject/src/main/webapp/css/index.css
@@ -23,19 +23,25 @@ a{
     padding: 5px;
 }
 
-.dropdown>h5>a{
+.dropdown>a{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
     color: #fff;
+    font-size: 20px;
 }
 
 .text_flex{
     display: flex;
     justify-content: end;
+    align-items: center;
+}
+.text_margine{
+	padding-top: 20px;
 }
 h5>.text_margine>a{
     font-size: 20px;
     color: #fff;
+   	padding-left : 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 .slick-next.slick-arrow{
@@ -59,7 +65,7 @@ h5>.text_margine>a{
     color: #444444;
   }
 
-.img-circle{
-	width: 30px;
-	height: p30px
+.userimg{
+	width: 50px;
+	height:50px;
 }
