오류 수정 커밋

--- a/miniproject/src/main/webapp/css/fb_list.css
+++ b/miniproject/src/main/webapp/css/fb_list.css
@@ -4,7 +4,7 @@
 	margin-top: 0px;
 	list-style: none;
 	font-size: 32px;
-	color: rgb(191, 217, 112);
+	color:#00A652;
 	text-align: left;
 	margin-bottom: 60px;
 }
