--- a/miniproject/src/main/webapp/css/join.css
+++ b/miniproject/src/main/webapp/css/join.css
@@ -140,7 +140,8 @@ body ::before {
 }
 .ck-res{
 	position: absolute;
-	left: 300px;
+	left: 200px;
+	width:400px;
 	justify-content: end;
 	z-index: 2;
 }
