--- a/miniproject/src/main/webapp/css/(FoodList)mylist.css
+++ b/miniproject/src/main/webapp/css/(FoodList)mylist.css
@@ -1,7 +1,30 @@
 @charset "UTF-8";
 
-hr.line {
+.flistsel select {
 	width: 100px;
-	color: red;
-	border: thin solid red;
+	height:30px;
+	padding-left: 5px;
+	font-size:15px;
+	color:purple;
+	border:1px solid black;
+	border-radius: 3px;
 }
+
+.ddayarea0 {
+	border-bottom: 1px solid black;
+	border-left: 10px solid silver;
+	align-items:center;
+	background: repeating-linear-gradient(135deg, silver, silver 1px, rgba(255,255,255,0.5) 0, rgba(255,255,255,0.5) 10px);
+}
+.ddayarea3 {
+	border-bottom: 1px solid black;
+	border-left: 10px solid tomato;
+	align-items:center;
+}
+.ddayarea7 {
+	border-bottom: 1px solid black;
+	border-left: 10px solid gold;
+	align-items:center;
+}
+
+
