--- a/miniproject/src/main/webapp/css/fb_add.css
+++ b/miniproject/src/main/webapp/css/fb_add.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "EUC-KR";
 
 .all-marjin {
 	padding-right: 10%;
@@ -13,10 +13,4 @@
 	color: #00A652;
 	text-align: left;
 	margin-bottom: 60px;
-}
-
-.thead {
-	border-top-width: 3px;
-	border-bottom-width: 3px;
-	border-color: #00A652;
 }
