--- a/miniproject/src/main/webapp/css/(FoodList)mylist.css
+++ b/miniproject/src/main/webapp/css/(FoodList)mylist.css
@@ -5,9 +5,36 @@
 	height:30px;
 	padding-left: 5px;
 	font-size:15px;
-	color:purple;
-	border:1px solid black;
+	color:green;
+	border:2px solid green;
 	border-radius: 3px;
+}
+
+.categorysel select {
+	color:black;
+	border: 2px solid black;
+	border-radius: 3px;
+	width: 120px;
+	height:30px;
+}
+
+.ref {
+	color:green;
+	font-size: 280%;
+	text-align: center;
+	padding :80px;
+}
+
+.hr line {
+	border:green;
+}
+
+.count {
+	text-align: right;
+	font-size: 100%;
+}
+.addfood{
+	text-align: right;
 }
 
 .ddayarea0 {
@@ -27,4 +54,23 @@
 	align-items:center;
 }
 
+.ddayareaAll {
+	border-bottom: 1px solid black;
+	border-left: 10px solid white;
+	align-items:center;
+}
 
+.submitbtn {
+/* 	 position: relative; */
+/*     border: none; */
+/*     display: inline-block; */
+/*     padding: 15px 30px; */
+/*     border-radius: 15px; */
+/*     font-family: "paybooc-Light", sans-serif; */
+/*     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2); */
+/*     text-decoration: none; */
+/*     font-weight: 600; */
+/*     transition: 0.25s; */
+    background-color: #519d9e;
+    color: #9dc8c8;
+}
