--- a/miniproject/src/main/webapp/css/foodmanage_list.css
+++ b/miniproject/src/main/webapp/css/foodmanage_list.css
@@ -17,6 +17,11 @@ margin-left:10%;
   padding:5px;
 }
 
+/* .form-control:Active{ */
+/* 	background-color: green; */
+/*   	border-color: green; */
+/* } */
+
 .text{
 	width:300px;
 }
@@ -86,6 +91,13 @@ margin-left:10%;
 	display:flex;
 	margin-top:5%;
 	overflow: scroll;
+	justify-content: center;
+	align-items: center;
+}
+
+#igname{
+	justify-content: center;
+	align-items: center;
 }
 
 .aa{
