--- a/miniproject/src/main/webapp/css/foodmanage_list.css
+++ b/miniproject/src/main/webapp/css/foodmanage_list.css
@@ -1,138 +1,183 @@
 @charset "UTF-8";
-.body_container{
-margin-right:10%;	
-margin-left:10%;	
-	
+
+.body_container {
+	margin-right: 10%;
+	margin-left: 10%;
 }
 
-.empty_div{
-	width:100%;
-	height:20px;
+.empty_div {
+	width: 100%;
+	height: 20px;
 	margin: 0 auto;
 }
 
 .btn {
-  display: block;
-  width: 80px;
-  padding:5px;
+	display: block;
+	width: 80px;
+	padding: 5px;
 }
 
-/* .form-control:Active{ */
-/* 	background-color: green; */
-/*   	border-color: green; */
-/* } */
-
-.text{
-	width:300px;
+.form-control {
+	color: green;
+	border: 2px solid green;
 }
 
-.middle_categories{
+.form-control:focus, .form-control:active {
+	box-shadow: none;
+	border-color: green;
+}
+
+.text {
+	width: 300px;
+}
+
+.middle_categories {
 	max-width: 100%;
-  	margin: 0 auto;
- 	padding: 20px;
-	height:55px;
-	display:flex;
-	
+	margin: 0 auto;
+	padding: 20px;
+	height: 55px;
+	display: flex;
 }
 
 .category-container {
-  width: 100%;
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 20px;
+	width: 100%;
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 20px;
 }
 
 .category-row {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 0 -1%;
-  padding:0;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin: 0px -1%;
+	padding: 1px;
+	height: 80%;
 }
 
 .category-item {
-  display: inline-block;
-  width: 9%;
-  margin: 1%;
-  padding:20px;
+	display: inline-block;
+	width: 9%;
+	margin: 1%;
+	padding-right: 0%;
+	padding-left: 40px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	max-width: 17%;
+	text-align: center;
 }
 
 .category-item img {
- width: 100%; 
-  height: auto;
+	width: 100%;
+	height: auto;
 }
 
 .hidden {
-  display: none;
+	display: none;
 }
 
 .btn-next {
-  display: block;
-  margin: 0 auto;
-}
-
-.ingredient_search{
-	width:100%;
-	height:35x;
-	display:flex;
-	justify-content: flex-end;
-}
-
-.ingredient_search_bt{
-	width:300px;
-	height:25x;
-	display:flex;
-	justify-content: flex-end;
-}
-
-.ingredient{
-	width:100%;
-	height:400px;
-	display:flex;
-	margin-top:5%;
-	overflow: scroll;
-	justify-content: center;
-	align-items: center;
-}
-
-#igname{
-	justify-content: center;
-	align-items: center;
-}
-
-.aa{
-  display: inline-block;
-  width:20%;
-  margin:0 auto;
-}
-
-.imgingredient{
-	border-radius:50%;
 	display: block;
-	margin-top:25px;
-	width:50%;
+	margin: 0 auto;
 }
 
-.addingredient{
-	width:100%;
-	height:38px;
-	display:flex;	
+.ingredient_search {
+	width: 100%;
+	height: 35x;
+	display: flex;
 	justify-content: flex-end;
 }
 
-.addingredient_bt{
-	width:450px;
-	height:25x;
-	display:flex;
+.ingredient_search_bt {
+	width: 300px;
+	height: 25x;
+	display: flex;
 	justify-content: flex-end;
 }
-.addingredient_text{
-	height:35px;
+
+#igname {
+	display: flex;
+/* 	justify-content: center; */
+/* 	 align-items : center; */
+	flex-wrap: wrap; /* 이미지가 많아지면 자동으로 두 줄로 나뉘도록 설정 */
+	height: 550px;
+	overflow: scroll;
+	margin-top: 30px;
+	width: 1300px;
+
 }
 
-.addingredient_btn{
-	width:50px;
-	height:35px;
+span {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 240px;
+	height:120px;
+	text-align: center;
+	margin-bottom: 10px;
+	margin-top: 20px;
 }
 
+.imgingredient {
+	border-radius: 50%;
+	display: block;
+	margin: 5px;
+	width: 160px;
+	height: 100%;
+}
+/* 	.ingredient{ */
+/* 		width:100%; */
+/* 		height:550px; */
+/* 		display:flex; */
+/* 		margin-top:7%; */
+/* 		overflow: scroll; */
+/* 		justify-content: center; */
+/* 		text-align:center; */
+/* 		align-items: center; */
 
+/* 	} */
+
+/* 	.aa{ */
+/* 	  display: inline-block; */
+/* 	  max-width:90%; */
+/* 	  height:auto; */
+/* 	  margin:0 auto; */
+/* 	  justify-content: center; */
+/* 	  align-items: center; */
+/* 	  text-align:center; */
+/* 	} */
+
+/* 	#igname{ */
+/* 	/* 	display:flex; */
+* /
+	/* 		justify-content:center; */
+	/* 	} */
+	/* 	.imgingredient{ */
+	/* 		border-radius:50%; */
+	/* 		display: block; */
+	/* 		margin-top:20px; */
+	/* 		width:100px; */
+	/* 	} */ 
+
+.addingredient {
+	width: 100%;
+	height: 38px;
+}
+
+.addingredient_bt {
+	width: 100%;
+	height: 45x;
+	display: flex;
+	justify-content: flex-end;
+}
+
+#textingredient {
+	width: 30%;
+	height: 35px;
+}
+
+.addingredient_btn {
+	width: 50px;
+	height: 35px;
+}
