--- a/miniproject/src/main/webapp/css/(FoodList)mylist.css
+++ b/miniproject/src/main/webapp/css/(FoodList)mylist.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{
+	font-family: 'NanumSquareNeo-Variable';
+}
 
 .flistsel select {
 	width: 100px;
@@ -10,31 +20,32 @@
 	border-radius: 3px;
 }
 
-.categorysel select {
-	color:black;
-	border: 2px solid black;
-	border-radius: 3px;
-	width: 120px;
-	height:30px;
+
+.name {
+	font-size: 140%;
 }
+
+/* 나의 냉장고 */
 
 .ref {
 	color:green;
-	font-size: 280%;
+	font-size: 230%;
 	text-align: center;
-	padding :80px;
+	padding-top:60px;
+	padding-bottom:70px;
+	font-weight: bold;
 }
+
+
 
 .hr line {
 	border:green;
 }
 
-.count {
-	text-align: right;
-	font-size: 100%;
-}
+
 .addfood{
-	text-align: right;
+	padding-bottom:30px;
+	text-align:center;
 }
 
 .ddayarea0 {
@@ -61,16 +72,30 @@
 }
 
 .submitbtn {
-/* 	 position: relative; */
-/*     border: none; */
-/*     display: inline-block; */
-/*     padding: 15px 30px; */
-/*     border-radius: 15px; */
-/*     font-family: "paybooc-Light", sans-serif; */
-/*     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2); */
-/*     text-decoration: none; */
-/*     font-weight: 600; */
-/*     transition: 0.25s; */
-    background-color: #519d9e;
-    color: #9dc8c8;
+	text-align:right;
+	margin: 50px;
+	padding-left:10px;
+}
+
+.nutrient table {
+	text-align:center;
+	margin: 10px;
+	padding: 10px;
+	
+}
+
+
+.contentsize {
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+.categorysel select {
+	color:black;
+	border: 2px solid black;
+	border-radius: 3px;
+	width: 120px;
+	height:30px;
+	font-size: 20px;
+	text-align: center;
 }
