--- a/miniproject/src/main/webapp/css/fb_detail.css
+++ b/miniproject/src/main/webapp/css/fb_detail.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{
+	font-family: 'NanumSquareNeo-Variable';
+}
 
 .all-marjin {
 	padding-right: 10%;
@@ -15,8 +25,8 @@
 	margin-bottom: 60px;
 }
 
-.fb-head {
-	border-top: solid 3px #00A652;
+.fb-all {
+	border-bottom:2px solid #00A652;
 }
 
 .fb-hl {
@@ -27,13 +37,13 @@
 .fb-hr {
 	text-align: right;
 	font-size: 20px;
-	color: grey;
-	vertical-align : bottom;
+	color: #F0FFF0;
+	vertical-align: bottom;
 }
 
 .fb-body {
-/* 	border-bottom: solid 3px #00A652; */
-/* 	border-top: solid 3px #00A652; */
+	/* 	border-bottom: solid 3px #00A652; */
+	/* 	border-top: solid 3px #00A652; */
 	height: auto;
 	min-height: 350px;
 	overflow: auto;
@@ -47,6 +57,6 @@
 	text-align: right;
 }
 
-.fc-table{
+.fc-table {
 	margin-bottom: 50px;
 }
