--- a/miniproject/src/main/webapp/css/foodmanage_list.css
+++ b/miniproject/src/main/webapp/css/foodmanage_list.css
@@ -5,6 +5,17 @@
 	margin-left: 10%;
 }
 
+@font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{
+	font-family: 'NanumSquareNeo-Variable';
+}
+
 .empty_div {
 	width: 100%;
 	height: 20px;
