--- a/miniproject/src/main/webapp/css/(FoodList)mylist.css
+++ b/miniproject/src/main/webapp/css/(FoodList)mylist.css
@@ -73,8 +73,11 @@
 
 .submitbtn {
 	text-align:right;
-	margin: 50px;
-	padding-left:10px;
+	margin-top: 30px;
+
+}
+#submitbtn {
+	margin-left: 10px;
 }
 
 .nutrient table {
