--- a/miniproject/src/main/webapp/css/index.css
+++ b/miniproject/src/main/webapp/css/index.css
@@ -4,10 +4,42 @@
 	background-color: #00A652
 }
 
+@font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'ONE-Mobile-Title';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/ONE-Mobile-Title.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'OAGothic-ExtraBold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/OAGothic-ExtraBold.woff2') format('woff2');
+    font-weight: 800;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'YUniverse-B';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_yuniverse@1.0/YUniverse-B.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{
+	font-family: 'NanumSquareNeo-Variable';
+}
+
 a {
 	text-decoration: none;
 	color: black;
 }
+.navbar{
+	padding : 0;
+} 
 
 .userpick {
 	width: 474px;
@@ -29,8 +61,8 @@ a {
 }
 
 .dropdown>a {
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-		sans-serif;
+	font-family: ONE-Mobile-Title;
+	font-weight: normal;
 	text-decoration: none;
 	color: #fff;
 	font-size: 20px;
@@ -47,11 +79,11 @@ a {
 }
 
 h5>.text_margine>a {
+	font-family: 'OAGothic-ExtraBold';
 	font-size: 20px;
 	color: #fff;
 	padding-left: 10px;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-		sans-serif
+	font-weight: 500;
 }
 
 .slick-next.slick-arrow {
@@ -93,21 +125,32 @@ h5>.text_margine>a {
 }
 
 .red {
-	background-color: #02F705;
+	font-size:20px;
+	color: crimson;
+	background-color: #FFF;
+	font-family: 'OAGothic-ExtraBold';
+	
 }
 
 .yellow {
-	background-color: gold;
+	font-size:20px;
+	color : orange;
+	background-color: #fff;
+	font-family: 'OAGothic-ExtraBold';
 }
 
 .green {
-	background-color: red;
+	font-size:20px;
+	color:#00A652;
+	background-color: #f6f3EE;
+	font-family: 'OAGothic-ExtraBold';
 }
 
 .myAcc {
 	background: none;
 	border: none;
 	box-shadow: none !important;
+	
 }
 
 .btn-secondary {
