--- a/miniproject/src/main/webapp/css/navoutline.css
+++ b/miniproject/src/main/webapp/css/navoutline.css
@@ -2,7 +2,17 @@
 .bgc{
     background-color: #00A652
     
-}  
+} 
+@font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+} 
+
+*{
+	font-family: 'NanumSquareNeo-Variable';
+}
 
 .navbar{
 	padding : 0;
@@ -28,7 +38,6 @@ a{
 }
 
 .dropdown>a{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
     color: black;
 }
@@ -76,15 +85,25 @@ a{
 }
 
 .red {
-	background-color: #02F705;
+	font-size:20px;
+	color: crimson;
+	background-color: #FFF;
+	font-family: 'OAGothic-ExtraBold';
+	
 }
 
 .yellow {
-	background-color: gold;
+	font-size:20px;
+	color : orange;
+	background-color: #fff;
+	font-family: 'OAGothic-ExtraBold';
 }
 
 .green {
-	background-color: red;
+	font-size:20px;
+	color:#00A652;
+	background-color: #f6f3EE;
+	font-family: 'OAGothic-ExtraBold';
 }
 
 .myAcc {
