--- a/miniproject/src/main/webapp/css/foodmanage_list.css
+++ b/miniproject/src/main/webapp/css/foodmanage_list.css
@@ -137,39 +137,17 @@ span {
 	width: 160px;
 	height: 100%;
 }
-/* 	.ingredient{ */
-/* 		width:100%; */
-/* 		height:550px; */
-/* 		display:flex; */
-/* 		margin-top:7%; */
-/* 		overflow: scroll; */
-/* 		justify-content: center; */
-/* 		text-align:center; */
-/* 		align-items: center; */
 
-/* 	} */
+::-webkit-scrollbar {
+  width: 5px; /* 스크롤바 너비 */
+  height: 5px; /* 스크롤바 높이 */
+  background-color: transparent; /* 배경색 */
+}
 
-/* 	.aa{ */
-/* 	  display: inline-block; */
-/* 	  max-width:90%; */
-/* 	  height:auto; */
-/* 	  margin:0 auto; */
-/* 	  justify-content: center; */
-/* 	  align-items: center; */
-/* 	  text-align:center; */
-/* 	} */
-
-/* 	#igname{ */
-/* 	/* 	display:flex; */
-* /
-	/* 		justify-content:center; */
-	/* 	} */
-	/* 	.imgingredient{ */
-	/* 		border-radius:50%; */
-	/* 		display: block; */
-	/* 		margin-top:20px; */
-	/* 		width:100px; */
-	/* 	} */ 
+::-webkit-scrollbar-thumb {
+  background-color: green; /* 스크롤바 색상 */
+  border-radius: 10px; /* 스크롤바 모서리 둥글게 */
+}
 
 .addingredient {
 	width: 100%;
