--- a/miniproject/src/main/webapp/css/foodmanage_detail.css
+++ b/miniproject/src/main/webapp/css/foodmanage_detail.css
@@ -10,6 +10,43 @@
 	font-family: 'NanumSquareNeo-Variable';
 }
 
+
+#text_ing {
+	border-color:white;	
+}
+#align_btn{
+	align-items:right;
+	text-align:right;
+}
+
+#addbtn{
+	display:inline-block;
+	width:120px;
+	height:45px;
+	text-align:center;
+	padding-top:0px;
+	padding-bottom:0px;
+	padding-right:0px;
+	padding-left:0px;
+	font-size:20px;
+}
+
+#memo {
+	width:250px;
+	
+}
+
+#bottom_line{
+	border-bottom: 1px solid black;
+}
+
+.btn btn-outline-danger{
+/* 	align-items:center; */
+	display:inline-block;
+	width: 50px;
+	height:30px;
+	text-align:center;
+}
 .col{
 	display:flex;
 	justify-content: center;
@@ -18,9 +55,12 @@
 
 .btn btn-success {
 	display: block;
-	width: 80px;
+	width: 150px;
+	height:70px;
 	padding: 5px;
 }
+
+
 
 .form-control {
 	color: green;
@@ -29,14 +69,20 @@
 	text-align:center;
 }
 
+.form-floating{
+	display:inline-block;
+	height:60px;
+}
+
 .form-control:focus, .form-control:active {
 	box-shadow: none;
 	border-color: green;
 }
 
-.submit_btn{
-	text-align:right;
-	align-items:right;
+.empty_div {
+	width: 100%;
+	height: 20px;
+	margin: 0 auto;
 }
 
 .flistsel select {
@@ -48,7 +94,6 @@
 	border:2px solid green;
 	border-radius: 3px;
 }
-
 
 .name {
 	font-size: 140%;
@@ -100,12 +145,6 @@
 	align-items:center;
 }
 
-.submitbtn {
-	text-align:right;
-	margin-top: 30px;
-
-}
-
 .nutrient table {
 	text-align:center;
 	margin: 10px;
@@ -113,13 +152,9 @@
 	
 }
 
-/* .container { */
-/* 	display:flex; */
-/* } */
-
 .contentsize {
-	margin-left: 10%;
-	margin-right: 10%;
+	margin-left: 15%;
+	margin-right: 15%;
 }
 .ingtext{
 	text-align:center;
@@ -128,15 +163,15 @@
 .row{
 	margin-top:30px;
 }
+
 .col{
 	text-align:center;	
 }
 
-.h6 {
+.h4 {
 	text-align:center;
 	align-items:center;
 }
-
 
 .categorysel select {
 	color:black;
