--- a/miniproject/src/main/webapp/css/foodmanage_list.css
+++ b/miniproject/src/main/webapp/css/foodmanage_list.css
@@ -118,7 +118,7 @@
 
 }
 
-span {
+#spanid {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -170,3 +170,5 @@ span {
 	width: 50px;
 	height: 35px;
 }
+
+
