--- a/miniproject/src/main/webapp/css/fb_list.css
+++ b/miniproject/src/main/webapp/css/fb_list.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
+
 @font-face {
-    font-family: 'NanumSquareNeo-Variable';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'NanumSquareNeo-Variable';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2')
+		format('woff2');
+	font-weight: normal;
+	font-style: normal;
 }
 
-*{
+* {
 	font-family: 'NanumSquareNeo-Variable';
 }
 
@@ -52,6 +55,6 @@
 	border-color: green;
 }
 
-.table{
+.table {
 	text-align: center;
 }
