HJ bang>foodmanage folder name, foodmanage jsp, list detailhandler 0503

--- a/miniproject/src/main/webapp/css/foodmanage_list.css
+++ b/miniproject/src/main/webapp/css/foodmanage_list.css
@@ -38,6 +38,15 @@
 	border-color: green;
 }
 
+.basket_div{
+	width:200px;
+}
+
+.basket{
+	width:90px;
+	height:55px;
+}
+
 .text {
 	width: 300px;
 }
