--- a/miniproject/src/main/webapp/css/navoutline.css
+++ b/miniproject/src/main/webapp/css/navoutline.css
@@ -28,9 +28,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'KorailRoundGothicBold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KorailRoundGothicBold.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
+
 *{
 	font-family: 'NanumSquareNeo-Variable';
 }
+
 
 .navbar{
 	padding : 0;
