--- a/miniproject/src/main/webapp/css/fb_detail.css
+++ b/miniproject/src/main/webapp/css/fb_detail.css
@@ -31,6 +31,7 @@
 .fb-all {
 	border-bottom: 2px solid #00A652;
 	margin-bottom: 20px;
+	
 }
 
 .fb-body {
@@ -40,6 +41,8 @@
 	padding-top: 20px;
 	padding-inline: 20px;
 	padding-bottom: 20px;
+	border-right: solid 2px #00A652;
+    border-left: solid 2px #00A652;
 }
 
 .button {
